k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws-k3s-webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
