k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aws-k3s-webapp-svc
spec:
  selector:
    app: webapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
