k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aws-k3s-webapp-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect : "false"
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: aws-k3s-webapp-svc
            port: 
              number: 80
